# osticket-zammad-migration

./: .pre-commit-config.yaml  LICENSE  README.md  README.txt  main.py  nossl.py  osticket.py  pyproject.toml  requirements.txt  zammad.py
src/osticket_zammad_migration/: __main__.py  nossl.py  osticket.py  zammad.py
